--- a/templates/school/admin_attendance.html
+++ b/templates/school/admin_attendance.html
@@ -58,65 +58,43 @@ facebook : fb.com/sumit.luv
         </thead>
 
         <tr>
-          <td> One</td>
+          <td> JSS I</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'one'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'one'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Two</td>
+          <td> JSS II</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'two'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'two'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Three</td>
+          <td> JSS III</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'three'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'three'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Four</td>
+          <td> SSS I</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'four'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'four'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Five</td>
+          <td> SSS II</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'five'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'five'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Six</td>
+          <td> SSS III</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
-        <tr>
-          <td> Seven</td>
-          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'seven'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
-          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'seven'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-        </tr>
 
-        <tr>
-          <td> Eight</td>
-          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'eight'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
-          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'eight'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-        </tr>
-
-        <tr>
-          <td> Nine</td>
-          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'nine'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
-          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'nine'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-        </tr>
-
-        <tr>
-          <td> Ten</td>
-          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'ten'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
-          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'ten'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-        </tr>
-
+  
       </table>
     </div>
 
