--- a/templates/school/footer.html
+++ b/templates/school/footer.html
@@ -13,7 +13,7 @@
 -----------------------------------------*/
     footer {
       padding: 0px 0px 0px 0px;
-      background-color: black;
+      background-color: rgb(3, 17, 65);
       margin: 0px;
     }
 
@@ -63,8 +63,8 @@
 <footer>
 
   <p>
-    <a href="https://facebook.com/sumit.luv/" class="fa fa-facebook"></a>
-    <a href="https://api.whatsapp.com/send?phone=919572181024&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
+    <a href="https://www.facebook.com/groups/2044200752549023" class="fa fa-facebook"></a>
+    <a href="https://api.whatsapp.com/send?phone=23288075111&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
     <a href="https://instagram.com/sumit.luv" class="fa fa-instagram"></a>
     <a href="https://twitter.com/sumitkumar1503" class="fa fa-twitter"></a>
   </p>
@@ -74,8 +74,8 @@
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
-          <p>Made in India <br>
-            Copyright &copy; 2020 LazyCoder </p>
+          <p>Developed by Bundu Kallon <br>
+            Copyright &copy; 2022 Social Target Academy  </p>
         </div>
       </div>
     </div>
