--- a/templates/school/index.html
+++ b/templates/school/index.html
@@ -36,11 +36,11 @@
 
     @-webkit-keyframes glow {
       from {
-        text-shadow: 0 0 10px #eeeeee, 0 0 20px #000000, 0 0 30px #000000, 0 0 40px #000000, 0 0 50px #9554b3, 0 0 60px #9554b3, 0 0 70px #9554b3;
+        text-shadow: 0 0 10px #f8efa0, 0 0 20px #f8efa0, 0 0 30px #f8efa0, 0 0 40px #f8efa0, 0 0 50px #f8efa0, 0 0 60px #9554b3, 0 0 70px #9554b3;
       }
 
       to {
-        text-shadow: 0 0 20px #eeeeee, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        text-shadow: 0 0 20px #070246, 0 0 30px #070246, 0 0 40px #070246, 0 0 50px #070246, 0 0 60px #070246, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
       }
     }
   </style>
@@ -53,10 +53,10 @@
   <br>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <br>
-    <h1 class="display-4 glow">Welcome</h1>
+    <h1 class="display-4 glow">Welcome to Social Target Academy</h1>
 
     <br><br>
-    <p>Knowledge is key to success.</p>
+    <p>Objectivity and Responsibility.</p>
     <br><br><br><br><br>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/studentsignup" role="button">Take Admission</a>
