--- a/templates/school/navbar.html
+++ b/templates/school/navbar.html
@@ -30,7 +30,7 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-      <a href="/" class="navbar-brand">School Management</a>
+      <a href="/" class="navbar-brand">S.T.A Management</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,8 +46,11 @@
         </div>
 
         <div class="navbar-nav">
+          <a href="prospectus" class="nav-item nav-link">Prospectus</a>
           <a href="/aboutus" class="nav-item nav-link">About Us</a>
+          <a href="gallary" class="nav-item nav-link">Gallary</a>
           <a href="contactus" class="nav-item nav-link">Contact Us</a>
+          
         </div>
 
 
