--- a/templates/school/footer.html
+++ b/templates/school/footer.html
@@ -73,7 +73,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-sm-12">
-        <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
+        <div style="color:#0c0202;" class="wow fadeInUp footer-copyright">
           <p>Developed by Bundu Kallon <br>
             Copyright &copy; 2022 Social Target Academy  </p>
         </div>
