--- a/templates/school/admin_add_student.html
+++ b/templates/school/admin_add_student.html
@@ -45,9 +45,9 @@
 
 </head>
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
 
 <!------ signup page for student by admin(sumit)  ---------->
