--- a/templates/school/admin_attendance.html
+++ b/templates/school/admin_attendance.html
@@ -58,43 +58,83 @@ facebook : fb.com/sumit.luv
         </thead>
 
         <tr>
-          <td> JSS I</td>
+          <td> Introduction to Windows </td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'one'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'one'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> JSS II</td>
+          <td> Microsoft Word</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'two'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'two'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> JSS III</td>
+          <td> Microsoft Powerpoint</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'three'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'three'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> SSS I</td>
+          <td> Microsoft Excel</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'four'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'four'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> SSS II</td>
+          <td> Microsoft Publisher</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'five'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'five'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> SSS III</td>
+          <td> Microsoft Access</td>
           <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
+        <tr>
+          <td> Internet</td>
+          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+        <tr>
 
-  
+          <td>Java</td>
+          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+
+        <td> JavaScript</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+      </tr>
+
+        <td> Python</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+      </tr>
+
+      <td> Python (Django)</td>
+      <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+      <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+        <td> CSS</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+      </tr>
+
+        <td> Graphic Design</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+
+        <tr>
+          <td> Hardware Infastructure </td>
+          <td><a class="btn btn-primary btn-xs" href="{% url 'admin-take-attendance' 'six'  %}"><span class="glyphicon glyphicon-plus"></span></a></td>
+          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-attendance' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+
       </table>
     </div>
 
@@ -103,10 +143,10 @@ facebook : fb.com/sumit.luv
 </div>
 
 
-<!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+  <!--
+written By : Bundu Kallon
+
+-->
 
 
 {% endblock content %}
