--- a/templates/school/admin_fee.html
+++ b/templates/school/admin_fee.html
@@ -51,54 +51,66 @@
         </thead>
 
         <tr>
-          <td>One</td>
+          <td>Introduction to Windows</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'one'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Two</td>
+          <td> Microsoft Word</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'two'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Three</td>
+          <td> Microsoft Excel</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'three'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Four</td>
+          <td> Microsoft Publisher</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'four'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Five</td>
+          <td> Microsoft Powerpoint</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'five'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Six</td>
+          <td> Microsoft Access</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'six'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Seven</td>
+          <td> Internet</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'seven'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Eight</td>
+          <td> Java  </td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'eight'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
+        <tr>
+
+          <td> JavaScript</td>
+          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'ten'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+
 
         <tr>
-          <td> Nine</td>
+          <td> CSS </td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'nine'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
 
         <tr>
-          <td> Ten</td>
+          <td> Python</td>
           <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'ten'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
         </tr>
+
+        <tr>
+          <td> Python (Django)</td>
+          <td><a class="btn btn-danger btn-xs" href="{% url 'admin-view-fee' 'ten'  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
+        </tr>
+
 
       </table>
     </div>
@@ -107,10 +119,10 @@
   </div>
 </div>
 
-<!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+  <!--
+written By : Bundu Kallon
+
+-->
 
 
 
