--- a/templates/school/admin_notice.html
+++ b/templates/school/admin_notice.html
@@ -77,9 +77,8 @@
 
 </form>
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
--->
+  <!--
+written By : Bundu Kallon
 
+-->
 {% endblock content %}
