--- a/templates/school/admin_teacher_student_card.html
+++ b/templates/school/admin_teacher_student_card.html
@@ -59,7 +59,7 @@
   <div class="grid-container">
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/admin.png" %}" alt="John" style="width:100%">
+        <img src="{% static "images/pp.jpg" %}" alt="John" style="width:100%">
         <p class="title">ADMIN</p>
         <p><button><a href="/adminclick">View</a></button></p>
       </div>
@@ -68,7 +68,7 @@
 
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/teacher.png" %}" alt="John" style="width:100%">
+        <img src="{% static "images/ppp.jpg" %}" alt="John" style="width:100%">
         <p class="title">TEACHER</p>
         <p><button><a href="/teacherclick">View</a></button></p>
       </div>
@@ -76,7 +76,7 @@
 
     <div class="grid-item">
       <div class="card">
-        <img src="{% static "images/student1.png" %}" alt="John" style="width:100%">
+        <img src="{% static "images/pppp.jpg" %}" alt="John" style="width:100%">
         <p class="title">STUDENT</p>
         <p><button><a href="/studentclick">View</a></button></p>
       </div>
@@ -86,8 +86,8 @@
 
 
   <!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+written By : Bundu Kallon
+
 -->
 
 
