--- a/templates/school/admin_view_fee.html
+++ b/templates/school/admin_view_fee.html
@@ -52,8 +52,8 @@
     </div>
   </div>
 </div>
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
 {% endblock content %}
