--- a/templates/school/adminbase.html
+++ b/templates/school/adminbase.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Social Target Academy || sumit</title>
+  <title>Empire Printing Press & Computer Training School  || sumit</title>
 
   <style media="screen">
     a:link {
@@ -204,11 +204,10 @@
     <br><br><br>
     {% include "school/footer.html" %}
   </div>
-  <!--content end-->
-  <!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+   <!--
+written By : Bundu Kallon
+
+-->
 </body>
 
 </html>
