--- a/templates/school/adminclick.html
+++ b/templates/school/adminclick.html
@@ -1,10 +1,9 @@
 {% extends 'school/homebase.html' %}
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
--->
+  <!--
+written By : Bundu Kallon
 
+-->
 
 {% block content %}
 
@@ -13,7 +12,7 @@ facebook : fb.com/sumit.luv
 
 <div class="jumbotron" style="margin-bottom:0px;">
   <h1 class="display-4">Hello, Admin</h1>
-  <p class="lead">Welcome to Online School Management System.</p>
+  <p class="lead"> Welcome to Empire Printing Press & Computer Training School .</p>
   <hr class="my-4">
   <p>You can access various features after Login/SignUp.</p>
   <p class="lead">
