--- a/templates/school/gallary.html
+++ b/templates/school/gallary.html
@@ -5,18 +5,43 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Social Target Academy || sumit</title>
-
+  <title>Empire Printing Press & Computer Training School || sumit</title>
 
 </head>
 
+
+
+
 <body>
+
+  <br><br>
+  
+  <center>
+    <h3 class='alert alert-success' style="margin-bottom:0px;">Recent Post!</h3>
+    <h1 class='alert alert-success' style="margin-bottom:0px;">Graphic Design </h1>
+  </center>
+  <hr size="value of size in numbers" width="value of width attribute in percentage" color="value of color">  
+  <img src={% static "images/bg3.jpg" %} img style="max-width: 49%;max-height: 30%;display: inline-block;">
+  <img src={% static "images/bg3.jpg" %} img style="max-width: 49%;max-height: 30%;display: inline-block;">
+  
+  <br><br>
+  <hr size="value of size in numbers" width="value of width attribute in percentage" color="value of color">  
+ 
+  <img src={% static "images\gb1.jpg" %} img style="max-width: 49%;max-height: 30%;display: inline-block;">
+  <img src={% static "images\bg5.jpg" %} img style="max-width: 50%;max-height: 40%;display: inline-block;">
+  
+
+  <br><br>
+  <hr size="value of size in numbers" width="value of width attribute in percentage" color="value of color">  
+  <img src={% static "images/bg4.jpg" %} img style="max-width: 70%;max-height: 40%;display: inline-block;">
+  <img src={% static "images/bg4.jpg" %} img style="max-width: 49%;max-height: 30%;display: inline-block;">
 
   {% include "school/navbar.html" %}
   <br><br>
 
   <center>
-    <h3 class='alert alert-success' style="margin-bottom:0px;">Recent Post!</h3>
+    <h3 class='alert alert-success' style="margin-bottom:0px;">Recent Post! </h3>
+    
   </center>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <h1 class="display-4">Recent Post</h1>
@@ -27,6 +52,8 @@
       <a class="btn btn-primary btn-lg" href="/" role="button">HOME</a>
     </p>
   </div>
+
+  
 
   {% include "school/footer.html" %}
 </body>
