--- a/templates/school/homebase.html
+++ b/templates/school/homebase.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Social Target Academy || sumit</title>
+  <title>Empire Printing Press & Computer Training School  || sumit</title>
   <style media="screen">
     .jumbotron {
       margin-top: 0px;
