--- a/templates/school/studentclick.html
+++ b/templates/school/studentclick.html
@@ -6,7 +6,7 @@
 
 <div class="jumbotron" style="margin-bottom:0px;">
   <h1 class="display-4">Hello, Student</h1>
-  <p class="lead">Welcome to Social Target Academy Secondary School.</p>
+  <p class="lead">Welcome to Empire Printing Press & Computer Training School.</p>
   <hr class="my-4">
   <p>You can access various features after Login.</p>
   <p class="lead">
