--- a/templates/school/teacherbase.html
+++ b/templates/school/teacherbase.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Social Target Academy|| sumit</title>
+  <title>Empire Printing Press & Computer Training School || sumit</title>
   <!--
     written By : sumit kumar
     facebook : fb.com/sumit.luv
