--- a/templates/school/admin_add_teacher.html
+++ b/templates/school/admin_add_teacher.html
@@ -90,9 +90,9 @@
 
 </form>
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
 
 {% endblock content %}
