--- a/templates/school/admin_approve_student.html
+++ b/templates/school/admin_approve_student.html
@@ -73,8 +73,8 @@ facebook : fb.com/sumit.luv
 </div>
 
 
-<!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+  <!--
+written By : Bundu Kallon
+
+-->
 {% endblock content %}
