--- a/templates/school/admin_approve_teacher.html
+++ b/templates/school/admin_approve_teacher.html
@@ -73,9 +73,9 @@ facebook : fb.com/sumit.luv
   </div>
 </div>
 
-<!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+  <!--
+written By : Bundu Kallon
+
+-->
 
 {% endblock content %}
