--- a/templates/school/admin_dashboard_cards.html
+++ b/templates/school/admin_dashboard_cards.html
@@ -111,10 +111,9 @@
 
 
   <!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
--->
+written By : Bundu Kallon
 
+-->
   <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
   <script type="text/javascript">
 
