--- a/templates/school/admin_update_student.html
+++ b/templates/school/admin_update_student.html
@@ -95,9 +95,9 @@
 
 </form>
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
 
 {% endblock content %}
