--- a/templates/school/admin_update_teacher.html
+++ b/templates/school/admin_update_teacher.html
@@ -89,9 +89,9 @@
 
 </form>
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
 
 {% endblock content %}
