--- a/templates/school/admin_view_attendance_page.html
+++ b/templates/school/admin_view_attendance_page.html
@@ -52,7 +52,7 @@
 </div>
 
 {% endblock content %}
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+  <!--
+written By : Bundu Kallon
+
 -->
