--- a/templates/school/admin_view_teacher.html
+++ b/templates/school/admin_view_teacher.html
@@ -26,11 +26,10 @@
 
 
 
-<!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
--->
+  <!--
+written By : Bundu Kallon
 
+-->
 <div class="container">
 
     	<div class="row" >
