--- a/templates/school/admin_view_teacher_salary.html
+++ b/templates/school/admin_view_teacher_salary.html
@@ -65,10 +65,9 @@
 </div>
 
 
-<!--
-      written By : sumit kumar
-      facebook : fb.com/sumit.luv
-      -->
+  <!--
+written By : Bundu Kallon
 
+-->
 
 {% endblock content %}
