--- a/templates/school/adminlogin.html
+++ b/templates/school/adminlogin.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Social Target Academy || sumit</title>
+  <title>Empire Printing Press & Computer Training School  || sumit</title>
 
 
   <style type="text/css">
@@ -98,8 +98,8 @@
 
   <br><br><br>
   <!--
-written By : sumit kumar
-facebook : fb.com/sumit.luv
+written By : Bundu Kallon
+
 -->
   {% include "school/footer.html" %}
 </body>
