--- a/templates/school/adminsignup.html
+++ b/templates/school/adminsignup.html
@@ -100,12 +100,10 @@
   </form>
 
 
-
   <!--
-        written By : sumit kumar
-        facebook : fb.com/sumit.luv
-        -->
+written By : Bundu Kallon
 
+-->
 
 
   {% include "school/footer.html" %}
