--- a/templates/school/footer.html
+++ b/templates/school/footer.html
@@ -61,19 +61,19 @@
 </head>
 
 <footer>
-
+  <hr size="8" width="90%" color="red">  
   <p>
-    <a href="https://www.facebook.com/groups/2044200752549023" class="fa fa-facebook"></a>
-    <a href="https://api.whatsapp.com/send?phone=23288075111&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
-    <a href="https://instagram.com/sumit.luv" class="fa fa-instagram"></a>
-    <a href="https://twitter.com/sumitkumar1503" class="fa fa-twitter"></a>
+    <a href="https://www.facebook.com/mohamed.pirezkamara" class="fa fa-facebook"></a>
+    <a href="https://api.whatsapp.com/send?phone=23230271727&text=Hello%20Sumit.%0d%0aHow%20are%20you%20%3f%0d%0aI%20came%20from%20your%20website.&source=&data=#" class="fa fa-whatsapp"></a>
+    <a href="https://instagram.com/notyeh" class="fa fa-instagram"></a>
+    <a href="https://twitter.com/notyeh" class="fa fa-twitter"></a>
   </p>
 
   <br>
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-sm-12">
-        <div style="color:#0c0202;" class="wow fadeInUp footer-copyright">
+        <div style="color:#f3ebeb;" class="wow fadeInUp footer-copyright">
           <p>Developed by Bundu Kallon <br>
             Copyright &copy; 2022 Social Target Academy  </p>
         </div>
