--- a/templates/school/index.html
+++ b/templates/school/index.html
@@ -8,39 +8,58 @@
 
   <style media="screen">
     .jumbotron {
-      margin-top: 0px;
-      margin-bottom: 0px;
-      background-image: url('{% static "images/bg2.jpg" %}');
+      margin-top: 3px;
+      margin-bottom: 4px;
+      background-image: url('{% static "images/R.PNG" %}' );
       background-size: cover;
       background-repeat: no-repeat;
+      background-attachment: absolute;
     }
 
     .jumbotron h1 {
       text-align: center;
     }
 
+    .jumbotron h1{
+      text-align: center;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      color: rgb(247, 7, 79);
+      text-decoration-color: black;
+      text-shadow:#9554b3;
+     
+
+      
+    }
+
     .alert {
       margin: 0px;
     }
 
+    .marq {
+        padding-top:50px;
+        padding-bottom:50px;
+    }
 
-
-    .glow {
-      font-size: 70px;
-      color: #ffffff;
+    .main {
+      font-size: 50px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-style: oblique;
+      color: #f8f8fa;
       text-align: center;
       -webkit-animation: glow 1s ease-in-out infinite alternate;
       -moz-animation: glow 1s ease-in-out infinite alternate;
       animation: glow 1s ease-in-out infinite alternate;
+      
     }
+    
 
     @-webkit-keyframes glow {
       from {
-        text-shadow: 0 0 10px #f8efa0, 0 0 20px #f8efa0, 0 0 30px #f8efa0, 0 0 40px #f8efa0, 0 0 50px #f8efa0, 0 0 60px #9554b3, 0 0 70px #9554b3;
+        text-shadow: 0 0 10px #0e0c01, 0 0 20px #070600, 0 0 30px #0a0901, 0 0 40px #080801, 0 0 50px #0c0b01, 0 0 60px #060008, 0 0 70px #9554b3;
       }
 
       to {
-        text-shadow: 0 0 20px #070246, 0 0 30px #070246, 0 0 40px #070246, 0 0 50px #070246, 0 0 60px #070246, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        text-shadow: 0 0 20px rgb(235, 128, 5), 0 0 30px #a05c03, 0 0 40px #d87708, 0 0 50px #c77407, 0 0 60px #e08308, 0 0 70px #d6770b, 0 0 80px #e07006;
       }
     }
   </style>
@@ -53,17 +72,25 @@
   <br>
   <div class="jumbotron" style="margin-bottom: 0px;margin-top: 0px;">
     <br>
-    <h1 class="display-4 glow">Welcome to Social Target Academy</h1>
 
+
+    <body>
+      <div class = "main">
+      <marquee class="marq" Scrollamount="9" direction = "left" loop="" >
+          <div class="geek1"> WELCOME TO EMPIRE PRINTING PRESS & COMPUTER TRAINING SCHOOL</div>
+      </marquee>
+      </div>
+
+    <h1 class="display-4 glow"><strong> ENROLL TODAY!!</strong>  </h1>
+
+   
     <br><br>
-    <p>Objectivity and Responsibility.</p>
-    <br><br><br><br><br>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="/studentsignup" role="button">Take Admission</a>
     </p>
     <br><br>
   </div>
-
+  <hr size="20" width="100%" color="red">  
   <br>
   <br>
   <br><br>
@@ -71,8 +98,7 @@
   {% include "school/admin_teacher_student_card.html" %}
 
   <br><br>
-  <br>
-  <br>
+
   <br>
   <br>
   {% include "school/footer.html" %}
