--- a/templates/school/navbar.html
+++ b/templates/school/navbar.html
@@ -30,11 +30,12 @@
 
   <div class="bs-example">
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-      <a href="/" class="navbar-brand">S.T.A Management</a>
+      <a href="/" class="navbar-brand">Empire  Management</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+  
+      
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav">
           <a href="/" class="nav-item nav-link active">Home</a>
