--- a/templates/school/prospectus.html
+++ b/templates/school/prospectus.html
@@ -5,7 +5,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Social Target Academy || sumit</title>
+  <title>Empire Printing Press & Computer Training School  || sumit</title>
 
 
 </head>
