--- a/templates/school/studentbase.html
+++ b/templates/school/studentbase.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>LazyCoder || sumit</title>
+  <title>Empire Printing Press & Computer Training School  || sumit</title>
 
   <style media="screen">
     a:link {
